--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <input type="text" id="search-title">
         <button id="search-btn">Search</button>
         <button id="reset-btn">Reset</button> 
-    </div>
+        <!-- <button id="theme-toggle-btn">Toggle Theme</button>
+    </div> -->
     <div id="gallery">
         <img src="images/image1.jpg" alt="landscape">
         <img src="images/image2.jpg" alt="green city">
@@ -34,7 +35,7 @@
   <button id="slideshow-btn">Start Slideshow</button>
   <button id="save-order-btn">Save Order</button>
 <footer>
-    &copy; 2024 Cheryl.All rights reserved
+    &copy; 2024 Cheryl.All rights reserved.
 </footer>
 <script src="script.js"></script>
 </body>
