--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Image Gallery</title>
 </head>
 <body>
-    
+    <h1>Image Gallery</h1>
     <input type="file" id="upload" accept="image/*" multiple> 
     <div>
         <label for="search-tags">Search by Tags:</label>
@@ -17,8 +17,8 @@
         <input type="text" id="search-title">
         <button id="search-btn">Search</button>
         <button id="reset-btn">Reset</button> 
-        <!-- <button id="theme-toggle-btn">Toggle Theme</button>
-    </div> -->
+        
+    </div> 
     <div id="gallery">
         <img src="images/image1.jpg" alt="landscape">
         <img src="images/image2.jpg" alt="green city">
